k8s/messaging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-ingress
  namespace: messaging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: messaging.local
      http:
        paths:
          - path: /rabbitmq-management
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
          - path: /rabbitmq-api
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 5672
          - path: /kafka-external
            pathType: Prefix
            backend:
              service:
                name: kafka-container
                port:
                  number: 29092
